--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-leaflet": "^2.2.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
