--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "traffic_light_demo",
+  "name": "intersection_visualisation_demo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kareldh.github.io/traffic_light_osm_demo/",
+  "homepage": "https://kareldh.github.io/intersection_visualisation_demo/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "ldfetch": "^1.1.1-alpha",
