--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "private": true,
   "homepage": "https://kareldh.github.io/intersection_visualisation_demo/",
   "dependencies": {
+    "@turf/along": "^6.0.1",
+    "@turf/bearing": "^6.0.1",
+    "@turf/distance": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
+    "@turf/nearest-point-on-line": "^6.0.2",
+    "@turf/point-to-line-distance": "^6.0.0",
     "gh-pages": "^2.0.1",
+    "heap": "^0.2.6",
     "ldfetch": "^1.1.1-alpha",
     "leaflet": "^1.4.0",
     "leaflet-ant-path": "^1.2.1",
+    "openlr-js": "^3.0.4",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-leaflet": "^2.2.1",
@@ -30,5 +38,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-test-renderer": "^16.8.6"
+  }
 }
