--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "leaflet": "^1.4.0",
     "leaflet-ant-path": "^1.2.1",
     "openlr-js": "^3.0.4",
+    "polygon-lookup": "^2.5.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-leaflet": "^2.2.1",
