--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@turf/helpers": "^6.1.4",
     "@turf/nearest-point-on-line": "^6.0.2",
     "@turf/point-to-line-distance": "^6.0.0",
+    "axios": "^0.18.0",
+    "fast-xml-parser": "^3.12.16",
     "gh-pages": "^2.0.1",
     "heap": "^0.2.6",
     "ldfetch": "^1.1.1-alpha",
