--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@turf/point-to-line-distance": "^6.0.0",
     "axios": "^0.18.0",
     "fast-xml-parser": "^3.12.16",
+    "geojson-rbush": "^3.1.1",
     "gh-pages": "^2.0.1",
     "heap": "^0.2.6",
     "ldfetch": "^1.1.1-alpha",
