--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-leaflet": "^2.2.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
